editors/tree-sitter-dea/test/corpus/declarations.txt
==================
L0 declarations
==================

module declarations;

import std.io;

type RawPointer = void*;

struct Pair {
    left: int;
    right: int;
}

enum Result {
    Value(value: int);
    Empty;
}

extern func read_value() -> int;

func add(left: int, right: int) -> int {
    return left + right;
}

func log_result(value: int) {
    std.io::printl_i(value);
}

---

(source_file
  (module_declaration
    name: (module_path
      segment: (identifier)))
  (import_declaration
    module: (module_path
      segment: (identifier)
      segment: (identifier)))
  (type_alias_declaration
    name: (identifier)
    type: (type
      base: (builtin_type)
      suffix: (type_suffix
        (pointer_type_suffix))))
  (struct_declaration
    name: (identifier)
    body: (struct_body
      (field_declaration
        name: (identifier)
        type: (type
          base: (builtin_type)))
      (field_declaration
        name: (identifier)
        type: (type
          base: (builtin_type)))))
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_variant_declaration
        name: (identifier)
        fields: (variant_field_list
          (variant_field
            name: (identifier)
            type: (type
              base: (builtin_type)))))
      (enum_variant_declaration
        name: (identifier))))
  (extern_function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      base: (builtin_type)))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          base: (builtin_type)))
      (parameter
        name: (identifier)
        type: (type
          base: (builtin_type))))
    return_type: (type
      base: (builtin_type))
    body: (block
      (simple_statement
        (return_statement
          value: (binary_expression
            left: (qualified_identifier
              name: (identifier))
            right: (qualified_identifier
              name: (identifier)))))))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          base: (builtin_type))))
    body: (block
      (simple_statement
        (expression_statement
          (call_expression
            function: (qualified_identifier
              module: (module_path
                segment: (identifier)
                segment: (identifier))
              name: (identifier))
            arguments: (argument_list
              (argument
                (qualified_identifier
                  name: (identifier))))))))))

==================
L1 declarations
==================

module declarations.l1;

export opaque { Handle }, Callback, Result, limit;

import std.io as io;
import check from std.assert;

struct Handle {
    value: int;
}

enum Result {
    Ok(value: int);
    Error(message: string);
}

type Callback = unsafe func(int*, string...) -> int;
type Matrix = int[2][3];
const limit: ulong = 0xFF;
let current: int = 0;

unsafe extern func inspect(pointer: int*) -> int;

unsafe func first(pointer: int*) -> int {
    return pointer[0];
}

func reset() {
    current = 0;
}

---

(source_file
  (module_declaration
    name: (module_path
      segment: (identifier)
      segment: (identifier)))
  (export_declaration
    (export_item
      (opaque_export
        name: (identifier)))
    (export_item
      name: (identifier))
    (export_item
      name: (identifier))
    (export_item
      name: (identifier)))
  (import_declaration
    module: (module_path
      segment: (identifier)
      segment: (identifier))
    alias: (identifier))
  (import_declaration
    name: (identifier)
    module: (module_path
      segment: (identifier)
      segment: (identifier)))
  (struct_declaration
    name: (identifier)
    body: (struct_body
      (field_declaration
        name: (identifier)
        type: (type
          base: (builtin_type)))))
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_variant_declaration
        name: (identifier)
        fields: (variant_field_list
          (variant_field
            name: (identifier)
            type: (type
              base: (builtin_type)))))
      (enum_variant_declaration
        name: (identifier)
        fields: (variant_field_list
          (variant_field
            name: (identifier)
            type: (type
              base: (builtin_type)))))))
  (type_alias_declaration
    name: (identifier)
    type: (type
      base: (function_type
        parameters: (function_type_parameter_list
          (function_type_parameter
            type: (type
              base: (builtin_type)
              suffix: (type_suffix
                (pointer_type_suffix))))
          (function_type_parameter
            type: (type
              base: (builtin_type))))
        return_type: (type
          base: (builtin_type)))))
  (type_alias_declaration
    name: (identifier)
    type: (type
      base: (builtin_type)
      suffix: (type_suffix
        (array_type_suffix
          length: (signed_integer_literal
            (integer_literal))))
      suffix: (type_suffix
        (array_type_suffix
          length: (signed_integer_literal
            (integer_literal))))))
  (const_declaration
    name: (identifier)
    type: (type
      base: (builtin_type))
    value: (integer_literal))
  (global_let_declaration
    name: (identifier)
    type: (type
      base: (builtin_type))
    value: (integer_literal))
  (extern_function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          base: (builtin_type)
          suffix: (type_suffix
            (pointer_type_suffix)))))
    return_type: (type
      base: (builtin_type)))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type
          base: (builtin_type)
          suffix: (type_suffix
            (pointer_type_suffix)))))
    return_type: (type
      base: (builtin_type))
    body: (block
      (simple_statement
        (return_statement
          value: (index_expression
            value: (qualified_identifier
              name: (identifier))
            index: (integer_literal))))))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (simple_statement
        (assignment_statement
          left: (qualified_identifier
            name: (identifier))
          right: (integer_literal))))))
